--- a/old-project-scripts/docker-compose.yaml
+++ b/old-project-scripts/docker-compose.yaml
@@ -1,22 +1,22 @@
 # This file should be placed in a directory with 2 folders: IDB_Front_2.0 and ImageDataBaseBackend (should be outside of the frontend folder)
 
 services:
-  # idb-front:
-  #   build: 
-  #     context: IDB_Front_2.0/
-  #     dockerfile: Dockerfile
-  #     args:
-  #       HOST_APP_PORT: ${HOST_APP_PORT}
-  #       LOCAL_BACKEND_PORT: ${LOCAL_BACKEND_PORT}
-  #       LOCAL_BACKEND_WEB_SOCKET_PORT: ${LOCAL_BACKEND_WEB_SOCKET_PORT}
-  #   environment:
-  #     HOST_APP_PORT: ${HOST_APP_PORT}
-  #     LOCAL_BACKEND_PORT: ${LOCAL_BACKEND_PORT}
-  #     LOCAL_BACKEND_WEB_SOCKET_PORT: ${LOCAL_BACKEND_WEB_SOCKET_PORT}
-  #   container_name: idb-front-2.0
-  #   ports:
-  #     - "${HOST_APP_PORT}:3000"
-  #   restart: unless-stopped
+  idb-front:
+    build: 
+      context: IDB_Front_2.0/
+      dockerfile: Dockerfile
+      args:
+        HOST_APP_PORT: ${HOST_APP_PORT}
+        LOCAL_BACKEND_PORT: ${LOCAL_BACKEND_PORT}
+        LOCAL_BACKEND_WEB_SOCKET_PORT: ${LOCAL_BACKEND_WEB_SOCKET_PORT}
+    environment:
+      HOST_APP_PORT: ${HOST_APP_PORT}
+      LOCAL_BACKEND_PORT: ${LOCAL_BACKEND_PORT}
+      LOCAL_BACKEND_WEB_SOCKET_PORT: ${LOCAL_BACKEND_WEB_SOCKET_PORT}
+    container_name: idb-front-2.0
+    ports:
+      - "${HOST_APP_PORT}:3000"
+    restart: unless-stopped
   image_db_backend:
     build: ImageDataBaseBackend
     container_name: IDB_backend
@@ -42,9 +42,8 @@ services:
       # - /Users/artempriadkin/Documents/IDBase/filesVolume/games:/app/dataBase/games
 
 
-
-      - /Users/artempriadkin/Documents/IDBase/filesVolume:/app/dataBase
-      - /Users/artempriadkin/Documents/IDBase/previews:/app/previews
+      - /Volumes/Lexar_SL500/MEGA_sync/IDBase/volumes:/app/dataBase
+      - /Volumes/Lexar_SL500/MEGA_sync/IDBase/previews:/app/previews
 
       # - /Users/artempriadkin/Development/test-data/volumes:/app/dataBase
       # - /Users/artempriadkin/Development/test-data/previews:/app/previews
@@ -59,8 +58,7 @@ services:
       # - /Volumes/Transcend V/Yandex.Disk.localized/IDBase/mongodb:/data/db
       # - /Users/artempriadkin/Documents/Yandex.Disk.localized/IDBase/mongodb:/data/db
 
-
-      - /Users/artempriadkin/Documents/IDBase/mongodb:/data/db
+      - /Volumes/Lexar_SL500/MEGA_sync/IDBase/mongodb:/data/db
       # - /Users/artempriadkin/Development/test-data/mongo:/data/db
     ports:
       - "27017:27017"
